--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
                >
             </p>
 
-            <div style="display: flex;">
+            <form id="terminal-form"
+                  style="display: flex;"
+                  >
                 <p class="terminal-text"
                    style="flex-shrink: 1; width: auto;"
                    >
                    <span id="terminal-input-prompt">$</span>&nbsp;
                 </p>
+
                 <input type="text"
                        value=""
                        id="terminal-input"
@@ -58,7 +61,7 @@
                        style="flex-grow: 1;"
                        autofocus
                        >
-            </div>
+            </form>
         </div>
     </body>
 
