Change prompt if input line is incomplete

--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,7 @@
                 <p class="terminal-text"
                    style="flex-shrink: 1; width: auto;"
                    >
-                   <span id="terminal-input-prompt">$</span>&nbsp;
+                   <span id="terminal-input-prompt"></span>&nbsp;
                 </p>
 
                 <input type="text"
