--- a/code/index.html
+++ b/code/index.html
@@ -65,7 +65,7 @@
         </div>
     </body>
 
-    <script async type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="compiled.js"></script>
 
-    <script async type="text/javascript" src="compiled.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </html>
