Disable autocomplete on terminal form

--- a/code/index.html
+++ b/code/index.html
@@ -47,6 +47,7 @@
 
             <form id="terminal-form"
                   style="display: flex;"
+                  autocomplete="off"
                   >
                 <p class="terminal-text"
                    style="flex-shrink: 1; width: auto;"
