--- a/code/index.html
+++ b/code/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <title>Browser-based Lua Interpreter</title>
+        <link rel="icon" type="image/svg+xml" href="favicon.svg">
+        <link rel="icon" type="image/png" href="favicon.png">
         <style type="text/css" media="screen">
 .terminal-text {
     background-color: black;
