--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
         <style type="text/css" media="screen">
 .terminal-text {
     background-color: black;
-    color: green;
+    color: rgb(114, 255, 114);
     font-family: monospace;
     font-size: 1rem;
     border: 0;
@@ -23,19 +23,19 @@
 .terminal-output-line {
     display: block;
     margin-bottom: 1rem;
-    color: white;
+    color: rgb(232, 230, 227);
 }
 
 .terminal-error-line {
     display: block;
     margin-bottom: 1rem;
-    color: red;
+    color: rgb(255, 26, 26);
 }
 
 .terminal-input-line {
     display: block;
     margin-bottom: 1rem;
-    color: green;
+    color: rgb(114, 255, 114);
 }
         </style>
     </head>
