--- a/code/index.html
+++ b/code/index.html
@@ -40,8 +40,8 @@
         </style>
     </head>
 
-    <body style="margin: 0; margin-top: -1rem; padding: 0 1rem 1rem; background-color: black; height: 100%;">
-        <div style="display: flex; flex-direction: column; justify-content: flex-end; height: 100%;">
+    <body style="margin: 0; padding: 0 1rem; background-color: black; height: 100%;">
+        <div style="display: flex; flex-direction: column; justify-content: flex-end; min-height: 100%;">
             <p id="terminal-output"
                class="terminal-text"
                >
@@ -61,7 +61,7 @@
                        value=""
                        id="terminal-input"
                        class="terminal-text"
-                       style="flex-grow: 1;"
+                       style="flex-grow: 1; margin-bottom: 1rem;"
                        autofocus
                        >
             </form>
