--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div style="display: flex; flex-direction: column; justify-content: flex-end; min-height: 100%;">
             <p id="terminal-output"
                class="terminal-text"
+               style="margin-top: 1rem;"
                >
             </p>
 
