Make terminal lines preformatted to preserve tabs

--- a/code/index.html
+++ b/code/index.html
@@ -24,18 +24,21 @@
     display: block;
     margin-bottom: 1rem;
     color: rgb(232, 230, 227);
+    white-space: pre;
 }
 
 .terminal-error-line {
     display: block;
     margin-bottom: 1rem;
     color: rgb(255, 26, 26);
+    white-space: pre;
 }
 
 .terminal-input-line {
     display: block;
     margin-bottom: 1rem;
     color: rgb(114, 255, 114);
+    white-space: pre;
 }
         </style>
     </head>
