Fix background when horizontally scrolling

--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%;">
+<html style="background-color: black; height: 100%;">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
