--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%;">
+<html style="background-color: black; height: 100%;">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
@@ -24,18 +24,21 @@
     display: block;
     margin-bottom: 1rem;
     color: rgb(232, 230, 227);
+    white-space: pre;
 }
 
 .terminal-error-line {
     display: block;
     margin-bottom: 1rem;
     color: rgb(255, 26, 26);
+    white-space: pre;
 }
 
 .terminal-input-line {
     display: block;
     margin-bottom: 1rem;
     color: rgb(114, 255, 114);
+    white-space: pre;
 }
         </style>
     </head>
