--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 
     <body style="margin: 0; padding: 0 1rem; background-color: black; height: 100%;">
         <div style="display: flex; flex-direction: column; justify-content: flex-end; min-height: 100%;">
+            <noscript>
+                <p class="terminal-error-line">Javascript seems to be disabled in your browser. Please enable it to use this Lua REPL</p>
+            </noscript>
+
             <p id="terminal-output"
                class="terminal-text"
                style="margin-top: 1rem;"
